--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@a1rth/css-normalize": "^1.1.9",
+    "atom-material-icons": "^3.0.0",
     "classnames": "^2.5.1",
     "imask": "^7.6.1",
     "swiper": "^11.1.15"
